# clckwrks-plugin-agreements

./: .gitignore  LICENSE  clckwrks-plugin-agreements.cabal
agreements-settings/: AgreementsSettings.hs
agreements-settings/Chili/: FormArrow.hs
src/Clckwrks/Agreements/: API.hs  Acid.hs  Monad.hs  Plugin.hs  Route.hs  SignupPlugin.hs  Types.hs  URL.hs
src/Clckwrks/Agreements/Page/: Template.hs  ViewAgreement.hs
